# VCpod

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  music-stack-planning.md  notes.md  pyproject.toml
config/: global.yaml
config/profiles/: alice.yaml  bob.yaml
config/secrets/pocketcasts/: alice.json
docs/: iopenpod-artworkdb-missing-mhii-chunk.md  m6-ipod-headless-recommendation.md
services/common/: pyproject.toml
services/common/src/common/: cli.py  config.py  lock.py  models.py  playlist.py  state.py
services/common/tests/: test_config.py  test_lock.py  test_models.py  test_playlist.py  test_state.py
services/common/tests/fixtures/: invalid_yaml.yaml  profile_bad_enum.yaml  profile_missing_field.yaml  profile_wrong_type.yaml
services/common/tests/fixtures/duplicate/: a.yaml  b.yaml
services/fetcher-apple/: Dockerfile  pyproject.toml
services/fetcher-apple/src/fetcher_apple/: api.py  cli.py  download.py  tag.py
services/fetcher-apple/tests/: test_api.py  test_download.py
services/fetcher-apple/tests/fixtures/: track1.m4a
services/fetcher-spotify/: Dockerfile  pyproject.toml
services/fetcher-spotify/src/fetcher_spotify/: api.py  cli.py  download.py  tag.py
services/fetcher-spotify/tests/: test_api.py  test_download.py  test_tag.py
services/fetcher-ytmusic/: Dockerfile  README.md  pyproject.toml
services/fetcher-ytmusic/src/fetcher_ytmusic/: api.py  cli.py  download.py  tag.py
services/fetcher-ytmusic/tests/: test_api.py  test_download.py
services/fetcher-ytmusic/tests/fixtures/: track2.m4a
services/ipod-sync/: pyproject.toml
services/ipod-sync/spike/: headless_write_poc.py
services/library-manager/: Dockerfile  pyproject.toml
services/library-manager/src/library_manager/: cleanup.py  cli.py  dedup.py  scan.py
services/library-manager/tests/: test_cleanup.py  test_dedup.py  test_scan.py
services/library-manager/tests/fixtures/: tagged.m4a  untagged.m4a
services/music-stack-cli/: pyproject.toml
services/music-stack-cli/src/music_stack_cli/: cli.py  orchestrate.py
services/music-stack-cli/tests/: test_orchestrate.py
services/podcast-manager/: Dockerfile  pyproject.toml
services/podcast-manager/src/podcast_manager/: api.py  cli.py  download.py
services/podcast-manager/tests/: test_api.py  test_download.py
services/sync-orchestrator/: README.md  pyproject.toml
services/sync-orchestrator/src/sync_orchestrator/: cli.py  device.py  playstate.py  selection.py  sync.py
services/sync-orchestrator/tests/: test_device.py  test_playstate.py  test_selection.py  test_sync.py
