[project]
name = "fetcher-spotify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "zotify",
    "librespot",
    "music-tag",
    "mutagen>=1.47.0",
    "httpx>=0.27",
]

[project.scripts]
fetcher-spotify = "fetcher_spotify.cli:main"

[tool.uv.sources]
common = { path = "../common" }
# zotify-dev/zotify (both `main` and the `v1.0-dev` branch used previously)
# is effectively abandoned as of the Spotify login5 auth migration
# (Aug 2025) — confirmed both still pin librespot to a June 2024 commit
# that predates the breaking change and its fix, and the v1.0-dev branch
# hasn't been touched since Sep 2024. Migrated to Googolplexed0/zotify, an
# actively maintained fork created specifically because of this (526
# stars, commits through 2026), which already carries the login5 fix.
# Pinned to a specific tested commit rather than tracking `main`, per this
# project's usual discipline for fetcher dependencies.
zotify = { git = "https://github.com/Googolplexed0/zotify.git", rev = "9ea3210198e1ad9f3fc995cca046973ff77238e5" }
librespot = { git = "https://github.com/Googolplexed0/librespot-python.git", rev = "7a89401ba151897d04efc6e8476c8ed68d417b3e" }

[tool.uv]
# zotify pins librespot to its own unpinned `main` in its own metadata
# ([tool.uv.sources] above doesn't override a direct-URL pin embedded in
# another package's metadata) — force the same pinned commit as above so
# both this project and zotify's own install resolve to the identical,
# tested librespot commit.
override-dependencies = [
    "librespot @ git+https://github.com/Googolplexed0/librespot-python.git@7a89401ba151897d04efc6e8476c8ed68d417b3e",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fetcher_spotify"]
