[project]
name = "fetcher-ytmusic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "ytmusicapi>=1.12,<2",
    "yt-dlp",
    "mutagen>=1.47.0",
    "httpx>=0.27",
]

[project.scripts]
fetcher-ytmusic = "fetcher_ytmusic.cli:main"

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fetcher_ytmusic"]
