[project]
name = "library-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "mutagen>=1.47.0",
    "rapidfuzz>=3.0",
]

[project.scripts]
library-manager = "library_manager.cli:main"

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/library_manager"]
