[project]
name = "music-stack-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fetcher-apple",
    "fetcher-ytmusic",
    "podcast-manager",
]

[project.scripts]
music-stack = "music_stack_cli.cli:main"

[tool.uv.sources]
common = { workspace = true }
fetcher-apple = { workspace = true }
fetcher-ytmusic = { workspace = true }
podcast-manager = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_stack_cli"]
