[project]
name = "podcast-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "httpx>=0.27",
]

[project.scripts]
podcast-manager = "podcast_manager.cli:main"

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_manager"]
