[project]
name = "sync-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "iopenpod==1.66.2",
]

[project.scripts]
sync-orchestrator = "sync_orchestrator.cli:main"

[tool.uv.sources]
common = { path = "../common" }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_orchestrator"]
